2003-07-10  Ion Badulescu  <ionut@buggy.badula.org>

	* include/am_utils.h (dlog): improved version for gcc, using
	vararg macros

	* amd/rpc_fwd.c (fwd_packet): unused variable when compiling
	without debugging

2003-07-10  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* include/am_utils.h (dlog): change the #define of non-debugging
	dlog to "nothing" so that all that'll be left behind is a list of
	args in parenthesis (arg,arg,...).  GCC and other native C
	compilers seem OK with it, even if it doesn't optimize away the
	whole debugging line.

	* ltmain.sh: was from libtool 1.4.2.  updated to libtool 1.4.3,
	the latest on RH9 systems (but is not the latest libtool
	available).  Stay with stable version in preparation for 6.1
	release.

	* config.{guess,sub}, doc/texinfo.tex: update to latest off of
	ftp.gnu.org.

2003-07-09  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>

	* amd/amfs_inherit.c (amfs_inherit_inherit): don't use // C++
	style comments: breaks non-C++ compilers (like AIX xlC 6)

2003-07-02  Ion Badulescu  <ionut@buggy.badula.org>

	* doc/am-utils.texi (opts Option): document ignore_portmapper option

	* conf/transp/transp_sockets.c (get_nfs_version): better
	protocol/version cycling while probing remote server; better log
	messages

	* amd/srvr_nfs.c (start_ping): improved log message
	(find_nfs_srvr): always use requested nfs_version/nfs_proto; make
	sure we have a valid NFS port; start the server as "valid, down" if
	the remote portmapper tells us the NFS service is not running;
	implement the "ignore_portmapper" pseudo-mount option

	* amd/rpc_fwd.c (fwd_packet): better debug messages

	* amd/ops_nfs.c (got_nfs_fh): log a messages if a root fh is
	denied; call wakeup even if mountd call fails

	* amd/amq_subr.c (xdr_amq_mount_info_qelem): use FSRV_ISUP/ISDOWN
	instead of checking the flags directly
	* amd/srvr_amfs_auto.c (free_srvr): ditto

	* amd/amfs_generic.c (amfs_bgmount): refined some error/debug
	messages

	* amd/amd.h (FSRV_ERROR): new macro